--- a/Source/WlanProfileViewer/WlanProfileViewer.csproj
+++ b/Source/WlanProfileViewer/WlanProfileViewer.csproj
@@ -112,9 +112,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\BindableBase.cs" />
-    <Compile Include="Common\BindableDisposableBase.cs" />
+    <Compile Include="Common\DisposableBase.cs" />
     <Compile Include="Helper\ColorExtension.cs" />
-    <Compile Include="Helper\HsbColor.cs" /> 
+    <Compile Include="Helper\HsbColor.cs" />
     <Compile Include="Models\Wlan\AuthenticationMethod.cs" />
     <Compile Include="Models\Wlan\EncryptionType.cs" />
     <Compile Include="Models\Wlan\IWlanWorker.cs" />
@@ -152,7 +152,7 @@
     </Compile>
     <Compile Include="Views\NotifyWindow.xaml.cs">
       <DependentUpon>NotifyWindow.xaml</DependentUpon>
-    </Compile>    
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
