--- a/Source/Wifinian/Wifinian.csproj
+++ b/Source/Wifinian/Wifinian.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Models\LogService.cs" />
     <Compile Include="Models\ProcessService.cs" />
     <Compile Include="Models\ProductInfo.cs" />
+    <Compile Include="Models\StartupService.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="MainController.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
