--- a/Source/Wifinian/App.config
+++ b/Source/Wifinian/App.config
@@ -20,4 +20,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="StartupTaskId" value="WifinianStartupTask" />
+  </appSettings>
 </configuration>
