--- a/Source/Wifinian/Wifinian.csproj
+++ b/Source/Wifinian/Wifinian.csproj
@@ -57,8 +57,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Library\ScreenFrame.dll</HintPath>
     </Reference>
+    <Reference Include="StartupAgency, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Library\StartupAgency.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -122,9 +127,7 @@
     <Compile Include="Models\FolderService.cs" />
     <Compile Include="Models\LanguageService.cs" />
     <Compile Include="Models\LogService.cs" />
-    <Compile Include="Models\ProcessService.cs" />
     <Compile Include="Models\ProductInfo.cs" />
-    <Compile Include="Models\StartupService.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="MainController.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
@@ -201,6 +204,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Library\StartupAgency.dll" />
+    <Content Include="Library\StartupBridge.dll" />
+    <Resource Include="Library\StartupBridge.xml" />
+    <Resource Include="Library\StartupAgency.xml" />
     <None Include="Wifinian.VisualElementsManifest.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
