--- a/Source/Wifinian/packages.config
+++ b/Source/Wifinian/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net48" />
   <package id="ReactiveProperty" version="4.2.2" targetFramework="net462" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net46" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net46" />
