--- a/Source/Wifinian/packages.config
+++ b/Source/Wifinian/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net48" />
-  <package id="ReactiveProperty" version="6.1.4" targetFramework="net48" />
-  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
-  <package id="System.Reactive" version="4.3.1" targetFramework="net48" />
-  <package id="System.Reactive.Core" version="4.3.1" targetFramework="net48" />
-  <package id="System.Reactive.Interfaces" version="4.3.1" targetFramework="net48" />
-  <package id="System.Reactive.Linq" version="4.3.1" targetFramework="net48" />
-  <package id="System.Reactive.PlatformServices" version="4.3.1" targetFramework="net48" />
-  <package id="System.Reactive.Windows.Threading" version="4.3.1" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net48" />
+  <package id="ReactiveProperty" version="7.5.1" targetFramework="net48" />
+  <package id="ReactiveProperty.Core" version="7.5.1" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Core" version="5.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Interfaces" version="5.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Linq" version="5.0.0" targetFramework="net48" />
+  <package id="System.Reactive.PlatformServices" version="5.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Windows.Threading" version="5.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
