--- a/Source/Wifinian/packages.config
+++ b/Source/Wifinian/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ManagedNativeWifi" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net48" />
   <package id="ReactiveProperty" version="7.8.3" targetFramework="net48" />
   <package id="ReactiveProperty.Core" version="7.8.3" targetFramework="net48" />
