--- a/Source/Wifinian/Wifinian.csproj
+++ b/Source/Wifinian/Wifinian.csproj
@@ -141,7 +141,7 @@
     <Compile Include="Models\Wlan\ProfileItem.cs" />
     <Compile Include="Models\AppDataService.cs" />
     <Compile Include="Models\LanguageService.cs" />
-    <Compile Include="Models\LogService.cs" />
+    <Compile Include="Models\Logger.cs" />
     <Compile Include="Models\ProductInfo.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
