--- a/Source/Wifinian.Test/Wifinian.Test.csproj
+++ b/Source/Wifinian.Test/Wifinian.Test.csproj
@@ -58,6 +58,9 @@
     <PackageReference Include="MSTest.TestFramework">
       <Version>2.2.10</Version>
     </PackageReference>
+    <PackageReference Include="ReactiveProperty">
+      <Version>9.6.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
